Fix audiosink issues on darwin

Fixed problems:
- Fix sound stucks on multiple resets/starts of QAudioSink.
  It was possible to reproduce on playback position change in
  mediaplayer.
- Improve audiosink stop (reduce waiting time). The optimization is
  based on the fact that it's possible to call AudioOutputUnitStop from
  the thread where it was started.
- add some auto test + imrove errors logging in tests. Tests work
  fine locally but still need some tune on CI

Task-number: QTBUG-111567
Change-Id: I0eb5c32af4c12dfc0694ee8f5967b4960a0b4ab2
Reviewed-by: Doris Verria <doris.verria@qt.io>
(cherry picked from commit 919b3d308b711c0b267808c783327f2c95233428)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>